code/tui/src/app/snapshots/app__mode_tests__clipboard_result_belongs_to_new_task_draft.snap
---
source: code/tui/src/app/mode_tests.rs
expression: render(&app)
---
  .                                  [Dashboard]  
                                                  
                                                  
                                                  
                                                  
                                                  
                                                  
                                                  
                                                  
                                                  
                                                  
  ──────────────────────────────────────────────  
  > new task [Image #1]                           
  ───────────────────────────── Automatic model   
  ⏸ Manual                                        
                       Enter send  ·  / commands
