code/tui/src/app/snapshots/app__mode_tests__fullscreen_draft_after_selection_escape.snap
---
source: code/tui/src/app/mode_tests.rs
expression: render(&app)
---
  .                          [— / —] [Dashboard]  
                                                  
                                                  
● focus message 05                                
                                                  
● focus message 06                                
                                                  
● focus message 07                                
                                                  
             Jump to bottom (click) ↓             
  ⏸ ask permissions on                            
  ──────────────────────────────────────────────  
  > x                                             
  ───────────────────────────── Automatic model   
                                                  
  Enter send  ·  shift+tab permissions
