code/tui/src/app/snapshots/app__mode_tests__fullscreen_home_after_inline_navigation.snap
---
source: code/tui/src/app/mode_tests.rs
expression: render(&app)
---
  .                          [— / —] [Dashboard]  
                                                  
  ╭────────────────────────────────────────────╮  
  │                                            │  
  │  Ash Code v0.1.0                           │  
  │  New worktree                              │  
  │  Resume session                            │  
  │  Settings                                  │  
  │  Help and shortcuts                        │  
  ╰────────────────────────────────────────────╯  
  ⏸ Manual                                        
  ──────────────────────────────────────────────  
  >                                               
  ───────────────────────────── Automatic model   
                                                  
  Enter send  ·  Tab actions  ·  / commands
