code/tui/src/app/snapshots/app__mode_tests__fullscreen_issues_receive_own_result.snap
---
source: code/tui/src/app/mode_tests.rs
expression: render(&app)
---
  .                          [— / —] [Dashboard]  
                                                  
─ Issues ─────────────────────────────────────────
                                                  
   Open    Closed                                 
  ╭────────────────────────────────────────────╮  
  │ Search keywords or #number                 │  
  ╰────────────────────────────────────────────╯  
   · 0 selected · 0 loaded ·                      
  FULL-ISSUE-ERROR                                
                                                  
                                                  
                                                  
                                                  
                                                  
  Tab state · Enter details · Space select
