code/tui/src/app/snapshots/app__mode_tests__inline_draft_after_panel_dismissed.snap
---
source: code/tui/src/app/mode_tests.rs
expression: render(&app)
---
                                                  
                                                  
                                                  
                                                  
                                                  
                                                  
                                                  
                                                  
                                                  
                                                  
                                                  
──────────────────────────────────────────────────
> keep editing this draft                         
──────────────────────────────────────────────────
                                                  
  ⏸ Manual
